--- a/css/eshop.scss
+++ b/css/eshop.scss
@@ -126,22 +126,24 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
-    p {
+    & p {
         text-transform: uppercase;
         font-size: 14px;
         font-weight: 500;
         padding-bottom: 20px;
     }
-    h1{
-        font-size:25px;
+    & h1{
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        font-weight: 400;
     }
-    h2 {
-        font-size: 40px;
+    & h2 {
+        font-size: 70px;
         margin: 0px;
         font-weight: 400;
         line-height: 1.0;
     }
-    a {
+    & a {
         text-decoration: none;
         text-transform: uppercase;
         color: white;
@@ -189,7 +191,6 @@ body {
             padding: 10px 40px;
         }
     }
-    
     .accessories {
         background-image: url("../img/banner_2.jpg");
         margin: 0 30px;
@@ -248,25 +249,6 @@ tbody td {
     margin:0 0 0 10px;
 }
 
-// .product-header {
-//     width: 100%;
-//     max-width: 650px;
-//     display: flex;
-//     justify-content: flex-start;
-//     border-bottom: 4px solid lightgrey;
-//     margin: 0 auto;
-// }
-
-// .product-title {
-//     width: 45%;
-// }
-
-// .price {
-//     width: 15%;
-//     display: flex;
-//     align-items: center;
-// }
-
 .amount{
     margin:0px;
 }
@@ -289,32 +271,173 @@ tbody td {
     border-bottom:none;
 }
 
-// .product {
-//     width: 45%;
-//     display: flex;
-//     justify-content: space-around;
-//     align-items: center;
-//     padding: 10px 0;
-//     border-bottom: 1px solid lightgrey;
-// }
-// .fas {
-//     padding: 0 5px;
-// }
-
-// .basketTotalContainer {
-//     display: flex;
-//     justify-content: flex-end;
-//     width: 100%;
-//     padding: 10px 0;
-// }
-
-// .basketTotalTitle {
-//     width: 30%;
-// }
-// .basketTotal {
-//     width: 10%;
-// }
 //------------------------------CART-----------------------------
+
+//-----------------------------RESPONZIVA - Martin------------
+@media all and (max-width: 576px) {
+    .head-1 {
+        padding: 0;
+    }
+
+    .free-shipping {
+        padding-left: 10px;
+    }
+    .nowhitespace {
+        white-space: nowrap;
+    }
+    
+    .head-2, .wrap-2 {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        /*width: 100%;*/
+    }
+    #navbar-2 li {
+        padding-right: 15px !important;   
+    }
+    #navbar-4 {
+        display: none !important;
+    } 
+    .head-2 {
+        padding: 0px;
+    }
+    .nav-1 {
+        margin-left: 25px;
+    }
+    .footer-end {
+        display: none;
+    }
+    .wrap-4 {
+        justify-content: center !important;
+    }
+    .footer-2 {
+        padding: 0 !important;
+    }
+    .good-box {
+        flex-direction: column;
+        max-width: 200px;
+    }
+    .part-3 h1 {
+        text-align: center;
+    }
+    
+    .account-icon {
+        display:none;
+    }
+    #navbar-1 {
+        padding: 0;
+    }
+    
+    .part-2 {
+        padding: 0;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .free-shipping {
+        padding-left: 10px;
+    }
+    .head-1 {
+        padding: 0;
+    }
+
+    .nowhitespace {
+        white-space: nowrap;
+    }
+
+    .head-2, .wrap-2 {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        // width: 100%;
+    }
+    
+    #navbar-2 li {
+        padding-right: 30px !important;
+    }    
+
+    #navbar-4 {
+        display: none !important;
+    }
+    .footer-end {
+        display: none;
+    }
+    
+    .head-2 {
+        padding: 0px;
+    }
+    .good-box {
+        flex-direction: column;
+        max-width: 200px;
+    }
+    .part-3 h1 {
+        text-align: center; 
+    }
+    // Martin edit 17:04
+    .part-2 {
+        padding: 0;
+        flex-direction: column !important;
+        justify-content: center;
+        margin-top: 270px;
+        margin-bottom: 100px;
+        align-items: center;
+    }
+    
+    .accessories {
+        margin: 0 !important;
+    }
+    .footer-1 {
+        padding: 0 !important;
+        margin-top: 300px;
+    }
+    #myInput {
+        margin-left: 30px;
+    }  
+}
+
+@media all and (max-width: 1250px) {
+    .nowhitespace {
+        white-space: nowrap;
+    } 
+    
+    
+}
+// ------------------------------.kosik-----------------
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+    table, thead, tbody, th, td, tr { 
+		display: block; 
+    }
+    thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+    } 
+    tr { 
+        border: 1px solid rgb(107, 107, 107); 
+    }
+    td { 
+		border: none;
+		border-bottom: 1px solid #eee; 
+        position: relative;
+        border-collapse: collapse;
+        
+		
+    }
+    .product-id {
+        display: none;
+    }
+    td:before { 
+		position: absolute;
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+
+}
 
 // ---------------------OBJEDNAVKOVY FORMULAR--------------------
 form {
@@ -337,8 +460,51 @@ fieldset input {
 .final-form {
    justify-content: center;
 }
+.product-id-form, .product-title-form, .quantity-form {
+    padding: 0;
+    
+}
+#submit-btn {
+    color: white;
+    background-color: #e7484c;
+    border-radius: 5px;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-top: 5px;
+    font-weight: 600;
+}
+
+#removeForm {
+    background-color: #b6b3b3;
+    border-radius: 5px;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-top: 5px;
+    font-weight: 600;
+}
 
 // ---------------------OBJEDNAVKOVY FORMULAR--------------------
+
+//---------------------------------SLIDER--------------------
+
+.carousel-caption a {
+    color: white;
+    padding: 10px;
+    background: rgb(231, 72, 76);
+    text-decoration: none;
+    border-radius: 3px;
+} 
+
+.carousel-caption a:hover {
+    color: white;
+    text-decoration: none;
+    background-color: rgb(236, 55, 61);
+}
+
+
+// ------------------------------/SLIDER-----------------------
 
 
 // ---------------------DETAIL PRODUKTU--------------------------
@@ -798,7 +964,7 @@ fieldset input {
     padding: 0 405px;
     text-align: center;
     .wrap-3 {
-        text-align: left;
+       // text-align: center;
         margin: 0px;
         & h2 {
             font-weight: 600;
@@ -898,24 +1064,29 @@ fieldset input {
     }
 }
 //---------------------------KONTAKTY---------------------------
-.contact{
-    .info{
+.main-contact{
         display: flex;
-      
-        .fas {
-            //margin-bottom:0px;
-           
-            color:rgb(231, 72, 76);
-            font-size:30px;
-        }
-        p{
-            text-transform:lowercse;
-            .middle{
-                //padding-bottom:10px;
+        justify-content: flex-start;
+       
+    .contact {
+        display: flex;
+        flex-direction: column;
+        margin-right:50px;
+        .info {
+            display: flex;
+            .fas {
+                width:40px;
+                color:rgb(231, 72, 76);
+                font-size:30px;
             }
-        }
+            p{
+                margin-top:0px;
+                margin-left:10px;
+                text-transform:none;
+                
+            }
 
+        } 
     }
-    
 }
 //---------------------------KONTAKTY---------------------------
